<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Training" >

    <include layout="@layout/my_toolbar_reflex"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/score"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/textview_score_reflex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="25dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/score_max"
            android:textSize="25dp"
            />
        <TextView
            android:id="@+id/textview_score_max_reflex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="25dp"
            android:text="0"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:text="@string/figure"
            android:textSize="25dp" />
        <TextView
            android:id="@+id/forme_reflex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_remplir"
            android:textSize="25dp"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar_reflex"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_reflex"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/textView_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="17dp"
            android:text="5"
            android:gravity="center"/>

    </LinearLayout>

    <plfi.plfi.gamePrintReflex
        android:id="@+id/reflex_drawing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite" />



</LinearLayout>